--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "@tensorflow/tfjs": "^4.15.0"
   },
   "devDependencies": {
     "vite": "^5.0.0"
